img src replace

--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="page-logo">
-                <img class="logo-img" src="images/logo.png" alt="learning journal logo">
+                <img class="logo-img" src="images/logo.jpeg" alt="learning journal logo">
                 <span class="page-name">My Learning Journal</span>
             </div>
             <div class="nav">
@@ -21,7 +21,7 @@
         </header>
         <main class="container">
             <div class="about-me">
-                    <img class="about-me-img" src="images/avatar-img.png" alt="profile picture">
+                    <img class="about-me-img" src="images/avatar-img.jpeg" alt="profile picture">
                 <section class="featured-article about-me-intro">
                     <h1 class="about-me-title">Hi there! My name is Roku and welcome to my learning journal.</h1>
                     <p class="feat-art-preview">After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
@@ -41,19 +41,19 @@
             </section>
             <section class="posts">
                     <article class="art-1">
-                        <img class="article-img" src="images/article-img-1.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-1.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 1</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p> 
                     </article>
                     <article class="art-2">
-                        <img class="article-img" src="images/article-img-2.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-2.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 2</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p> 
                     </article>
                     <article class="art-3">
-                        <img class="article-img" src="images/article-img-3.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-3.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 3</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
