--- a/featured-article.html
+++ b/featured-article.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="page-logo">
-                <img class="logo-img" src="images/logo.png" alt="learning journal logo">
+                <img class="logo-img" src="images/logo.jpeg" alt="learning journal logo">
                 <span class="page-name">My Learning Journal</span>
             </div>
             <div class="nav">
@@ -25,7 +25,7 @@
                 <h1 class="feat-art-title">My new journey as a bootcamp student.</h1>
                 <p class="feat-art-preview">After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
             </section>
-            <img class="featured-img" src="images/article-img-featured.png" alt="Post thumbnail">
+            <img class="featured-img" src="images/article-img-featured.jpeg" alt="Post thumbnail">
             <section class="featured-article feat-art-text">
                 <span class="bold">How I stay committed to learning</span>
                 <span>I like to think of myself as a lifelong learner. I used to spend hours and hours learning, then try to create simple projects using what I learned or work new techniques into existing projects.</span>
@@ -39,19 +39,19 @@
             </section>
             <section class="posts">
                     <article class="art-1">
-                        <img class="article-img" src="images/article-img-1.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-1.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 1</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p> 
                     </article>
                     <article class="art-2">
-                        <img class="article-img" src="images/article-img-2.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-2.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 2</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p> 
                     </article>
                     <article class="art-3">
-                        <img class="article-img" src="images/article-img-3.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-3.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 3</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
