--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="page-logo">
-                <img class="logo-img" src="images/logo.png" alt="learning journal logo">
+                <img class="logo-img" src="images/logo.jpeg" alt="learning journal logo">
                 <span class="page-name">My Learning Journal</span>
             </div>
             <div class="nav">
@@ -27,37 +27,37 @@
                 </section> 
                 <section class="posts container">
                     <article class="art-1">
-                        <img class="article-img" src="images/article-img-1.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-1.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 1</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p> 
                     </article>
                     <article class="art-2">
-                        <img class="article-img" src="images/article-img-2.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-2.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 2</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p> 
                     </article>
                     <article class="art-3">
-                        <img class="article-img" src="images/article-img-3.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-3.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 3</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
                     </article>
                     <article class="art-4">
-                        <img class="article-img" src="images/article-img-4.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-4.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 4</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
                     </article>
                     <article class="art-5">
-                        <img class="article-img" src="images/article-img-5.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-5.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 5</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
                     </article>
                     <article class="art-6">
-                        <img class="article-img" src="images/article-img-6.png" alt="Post thumbnail">
+                        <img class="article-img" src="images/article-img-6.jpeg" alt="Post thumbnail">
                         <span class="article-info">Sept 1, 2022</span>
                         <h2 class="article-title">Blog 6</h2>
                         <p class="article-preview">I'm excited to start a new learning journey</strong> as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
