--- a/about-me.html
+++ b/about-me.html
@@ -36,7 +36,7 @@
                 <span>I started simple and gradually grew my learning journal site. I would take notes about what I was learning. After each learning session, I'd use my notes to not only reflect on what I learned but also write short summaries of what I learned using my own words.</span>
                 <span>That helped me grok what I was learning, and I realized that posting my learning summaries was also helping others learn and stay motivated.</span>
             </section>
-            <section class="recent-posts"
+            <section class="recent-posts">
                 <span>Recent posts</span>
             </section>
             <section class="posts">
